external-crates/move/crates/move-compiler/tests/move_2024/typing/index_call_constraints_unsatisfied.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:18:18
   │
 6 │ public fun in<T: drop + copy>(self: &Box<T>): &T { &self.value }
   │                         ---- 'copy' constraint declared here
   ·
17 │ public fun test01<A>(b: &Box<A>) {
   │                   -          - The type 'A' does not have the ability 'copy'
   │                   │           
   │                   To satisfy the constraint, the 'copy' ability would need to be added here
18 │     let _b_val = b[];
   │                  ^^^ 'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:18:18
   │
 6 │ public fun in<T: drop + copy>(self: &Box<T>): &T { &self.value }
   │                  ---- 'drop' constraint declared here
   ·
17 │ public fun test01<A>(b: &Box<A>) {
   │                   -          - The type 'A' does not have the ability 'drop'
   │                   │           
   │                   To satisfy the constraint, the 'drop' ability would need to be added here
18 │     let _b_val = b[];
   │                  ^^^ 'drop' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:18:18
   │
17 │ public fun test01<A>(b: &Box<A>) {
   │                   -          - The type 'A' does not have the ability 'copy'
   │                   │           
   │                   To satisfy the constraint, the 'copy' ability would need to be added here
18 │     let _b_val = b[];
   │                  ^^^ Invalid implicit copy of index result without the 'copy' ability

error[E06001]: unused value without 'drop'
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:18:21
   │
17 │ public fun test01<A>(b: &Box<A>) {
   │                   -          - The type 'A' does not have the ability 'drop'
   │                   │           
   │                   To satisfy the constraint, the 'drop' ability would need to be added here
18 │     let _b_val = b[];
   │         ------      ^ Invalid return
   │         │            
   │         The local variable '_b_val' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:23:18
   │
 6 │ public fun in<T: drop + copy>(self: &Box<T>): &T { &self.value }
   │                         ---- 'copy' constraint declared here
   ·
22 │ public fun test02<A>(b: &mut Box<A>) {
   │                   -              - The type 'A' does not have the ability 'copy'
   │                   │               
   │                   To satisfy the constraint, the 'copy' ability would need to be added here
23 │     let _b_val = &b[];
   │                  ^^^^ 'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:23:18
   │
 6 │ public fun in<T: drop + copy>(self: &Box<T>): &T { &self.value }
   │                  ---- 'drop' constraint declared here
   ·
22 │ public fun test02<A>(b: &mut Box<A>) {
   │                   -              - The type 'A' does not have the ability 'drop'
   │                   │               
   │                   To satisfy the constraint, the 'drop' ability would need to be added here
23 │     let _b_val = &b[];
   │                  ^^^^ 'drop' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:23:19
   │
 6 │ public fun in<T: drop + copy>(self: &Box<T>): &T { &self.value }
   │                         ---- 'copy' constraint declared here
   ·
22 │ public fun test02<A>(b: &mut Box<A>) {
   │                   -              - The type 'A' does not have the ability 'copy'
   │                   │               
   │                   To satisfy the constraint, the 'copy' ability would need to be added here
23 │     let _b_val = &b[];
   │                   ^^^ 'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:23:19
   │
 6 │ public fun in<T: drop + copy>(self: &Box<T>): &T { &self.value }
   │                  ---- 'drop' constraint declared here
   ·
22 │ public fun test02<A>(b: &mut Box<A>) {
   │                   -              - The type 'A' does not have the ability 'drop'
   │                   │               
   │                   To satisfy the constraint, the 'drop' ability would need to be added here
23 │     let _b_val = &b[];
   │                   ^^^ 'drop' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:28:18
   │
 9 │ public fun in_mut<T: drop + copy>(self: &mut Box<T>): &mut T { &mut self.value }
   │                             ---- 'copy' constraint declared here
   ·
27 │ public fun test03<A: drop>(b: &mut Box<A>) {
   │                   -                    - The type 'A' does not have the ability 'copy'
   │                   │                     
   │                   To satisfy the constraint, the 'copy' ability would need to be added here
28 │     let _b_val = &mut b[];
   │                  ^^^^^^^^ 'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:28:23
   │
 6 │ public fun in<T: drop + copy>(self: &Box<T>): &T { &self.value }
   │                         ---- 'copy' constraint declared here
   ·
27 │ public fun test03<A: drop>(b: &mut Box<A>) {
   │                   -                    - The type 'A' does not have the ability 'copy'
   │                   │                     
   │                   To satisfy the constraint, the 'copy' ability would need to be added here
28 │     let _b_val = &mut b[];
   │                       ^^^ 'copy' constraint not satisifed

error[E01013]: invalid 'move' or 'copy'
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:33:18
   │
33 │     let _b_val = copy &mut _b[];
   │                  ^^^^ --------- Expected a name or path access, e.g. 'x' or 'e.f'
   │                  │     
   │                  Invalid 'copy' of expression

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:38:18
   │
 6 │ public fun in<T: drop + copy>(self: &Box<T>): &T { &self.value }
   │                  ---- 'drop' constraint declared here
   ·
37 │ public fun test05<A: copy,B: drop>(b: &Box<A>, mb: &mut Box<B>) {
   │                   -                        - The type 'A' does not have the ability 'drop'
   │                   │                         
   │                   To satisfy the constraint, the 'drop' ability would need to be added here
38 │     let _b_val = &b[]; // invalid
   │                  ^^^^ 'drop' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:38:19
   │
 6 │ public fun in<T: drop + copy>(self: &Box<T>): &T { &self.value }
   │                  ---- 'drop' constraint declared here
   ·
37 │ public fun test05<A: copy,B: drop>(b: &Box<A>, mb: &mut Box<B>) {
   │                   -                        - The type 'A' does not have the ability 'drop'
   │                   │                         
   │                   To satisfy the constraint, the 'drop' ability would need to be added here
38 │     let _b_val = &b[]; // invalid
   │                   ^^^ 'drop' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:39:19
   │
 9 │ public fun in_mut<T: drop + copy>(self: &mut Box<T>): &mut T { &mut self.value }
   │                             ---- 'copy' constraint declared here
   ·
37 │ public fun test05<A: copy,B: drop>(b: &Box<A>, mb: &mut Box<B>) {
   │                           -                                 - The type 'B' does not have the ability 'copy'
   │                           │                                  
   │                           To satisfy the constraint, the 'copy' ability would need to be added here
38 │     let _b_val = &b[]; // invalid
39 │     let _mb_val = &mut mb[]; // invalid
   │                   ^^^^^^^^^ 'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:39:24
   │
 6 │ public fun in<T: drop + copy>(self: &Box<T>): &T { &self.value }
   │                         ---- 'copy' constraint declared here
   ·
37 │ public fun test05<A: copy,B: drop>(b: &Box<A>, mb: &mut Box<B>) {
   │                           -                                 - The type 'B' does not have the ability 'copy'
   │                           │                                  
   │                           To satisfy the constraint, the 'copy' ability would need to be added here
38 │     let _b_val = &b[]; // invalid
39 │     let _mb_val = &mut mb[]; // invalid
   │                        ^^^^ 'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:44:18
   │
 6 │ public fun in<T: drop + copy>(self: &Box<T>): &T { &self.value }
   │                         ---- 'copy' constraint declared here
   ·
43 │ public fun test06<A:drop ,B: copy>(b: &Box<A>, mb: &mut Box<B>) {
   │                   -                        - The type 'A' does not have the ability 'copy'
   │                   │                         
   │                   To satisfy the constraint, the 'copy' ability would need to be added here
44 │     let _b_val = &b[];
   │                  ^^^^ 'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:44:19
   │
 6 │ public fun in<T: drop + copy>(self: &Box<T>): &T { &self.value }
   │                         ---- 'copy' constraint declared here
   ·
43 │ public fun test06<A:drop ,B: copy>(b: &Box<A>, mb: &mut Box<B>) {
   │                   -                        - The type 'A' does not have the ability 'copy'
   │                   │                         
   │                   To satisfy the constraint, the 'copy' ability would need to be added here
44 │     let _b_val = &b[];
   │                   ^^^ 'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:45:19
   │
 9 │ public fun in_mut<T: drop + copy>(self: &mut Box<T>): &mut T { &mut self.value }
   │                      ---- 'drop' constraint declared here
   ·
43 │ public fun test06<A:drop ,B: copy>(b: &Box<A>, mb: &mut Box<B>) {
   │                           -                                 - The type 'B' does not have the ability 'drop'
   │                           │                                  
   │                           To satisfy the constraint, the 'drop' ability would need to be added here
44 │     let _b_val = &b[];
45 │     let _mb_val = &mut mb[];
   │                   ^^^^^^^^^ 'drop' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/index_call_constraints_unsatisfied.move:45:24
   │
 6 │ public fun in<T: drop + copy>(self: &Box<T>): &T { &self.value }
   │                  ---- 'drop' constraint declared here
   ·
43 │ public fun test06<A:drop ,B: copy>(b: &Box<A>, mb: &mut Box<B>) {
   │                           -                                 - The type 'B' does not have the ability 'drop'
   │                           │                                  
   │                           To satisfy the constraint, the 'drop' ability would need to be added here
44 │     let _b_val = &b[];
45 │     let _mb_val = &mut mb[];
   │                        ^^^^ 'drop' constraint not satisifed
